fix: Moved truncation level to inline styling for event. Passed widthLevel to day. Changed Eye icon in category selector to scale font size properly. Added space to events with "penalty(financial".

--- a/frontend/src/components/Day.css
+++ b/frontend/src/components/Day.css
@@ -7,32 +7,17 @@
 }
 
 /* Truncate line */
-.truncate-2 {
+.truncate {
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
-  -webkit-line-clamp: 2; /* number of lines to show */
-          line-clamp: 2;
-  -webkit-box-orient: vertical;
-}
-
-/* Truncate line */
-.truncate-3 {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 3; /* number of lines to show */
-          line-clamp: 3;
   -webkit-box-orient: vertical;
 }
 
 .event {
   margin-block-start: 0em;
   padding: 0.2em;
-  /* border: 1px solid rgba(255, 255, 255, 0.87); */
   border-radius: 0.3em;
-  /* background-color: rgb(56, 92, 146); */
-  /* font-weight: 400; */
   font-size: 13px;
 }
 
@@ -41,8 +26,8 @@
 }
 
 .event:hover .event-descriptions {
-  -webkit-line-clamp: none; /* number of lines to show */
-          line-clamp: none;
+  -webkit-line-clamp: none!important; /* number of lines to show */
+          line-clamp: none!important;
 }
 
 /* Event descriptions */
