--- a/frontend/src/components/Month.css
+++ b/frontend/src/components/Month.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   height: 100%;
   min-height: 150px;
-  min-width: 90px;
+  /* min-width: 90px; */
   background: repeating-linear-gradient(-45deg, transparent 0 3px, var(--timetable-stripes-dark) 3px 6px);
 }
 
